# fastpli

./: .clang-format  .docker_run.sh  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .style.yapf  CMakeLists.txt  Dockerfile  Dockerfile.ubuntu  LICENSE  Makefile  README.md  TODO.md  check-format.sh  docker-compose.yml  dockerfile  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml  main.yml  release.yml
.gitlab/: .gitlab-ci.yml
CI/: dockerfile  readme.md  run-all.sh  run-build.sh  run-code-check.sh  run-code-formatter.sh  run-docker.sh  run-docs.sh  run-env.sh  run-examples.sh  run-pytest.sh  run-wiki.sh
_autosummary/: fastpli.analysis.affine_transformation.apply.html  fastpli.analysis.affine_transformation.calc_matrix.html  fastpli.analysis.affine_transformation.exec_matrix.html  fastpli.analysis.affine_transformation.html  fastpli.analysis.epa.direction.html  fastpli.analysis.epa.epa.html  fastpli.analysis.epa.html  fastpli.analysis.html  fastpli.analysis.images.fom_hsv_black.html  fastpli.analysis.images.fom_rgb.html  fastpli.analysis.images.hsv_black_sphere.html  fastpli.analysis.images.html  fastpli.analysis.images.rgb_sphere.html  fastpli.analysis.images.to_image_space.html  fastpli.analysis.images.unit_vectors.html  fastpli.analysis.orientation.fiber.html  fastpli.analysis.orientation.fiber_bundle.html  fastpli.analysis.orientation.fiber_bundles.html  fastpli.analysis.orientation.histogram.html  fastpli.analysis.orientation.html  fastpli.analysis.orientation.remap_direction.html  fastpli.analysis.orientation.remap_half_sphere_x.html  fastpli.analysis.orientation.remap_half_sphere_z.html  fastpli.analysis.orientation.remap_orientation.html  fastpli.analysis.orientation.remap_sphere.html  fastpli.analysis.orientation.remap_spherical.html  fastpli.analysis.rofl.html  fastpli.analysis.rofl.rofl.html  fastpli.io.fiber_bundles.html  fastpli.io.fiber_bundles.load.html  fastpli.io.fiber_bundles.load_dat.html  fastpli.io.fiber_bundles.load_h5.html  fastpli.io.fiber_bundles.save.html  fastpli.io.fiber_bundles.save_dat.html  fastpli.io.fiber_bundles.save_h5.html  fastpli.io.html  fastpli.model.html  fastpli.model.sandbox.build.bundle.html  fastpli.model.sandbox.build.cuboid.html  fastpli.model.sandbox.build.cylinder.html  (+42 more)
_modules/: index.html
_sources/: index.rst.txt
_sources/_autosummary/: fastpli.analysis.affine_transformation.apply.rst.txt  fastpli.analysis.affine_transformation.calc_matrix.rst.txt  fastpli.analysis.affine_transformation.exec_matrix.rst.txt  fastpli.analysis.affine_transformation.rst.txt  fastpli.analysis.epa.direction.rst.txt  fastpli.analysis.epa.epa.rst.txt  fastpli.analysis.epa.rst.txt  fastpli.analysis.images.fom_hsv_black.rst.txt  fastpli.analysis.images.fom_rgb.rst.txt  fastpli.analysis.images.hsv_black_sphere.rst.txt  fastpli.analysis.images.rgb_sphere.rst.txt  fastpli.analysis.images.rst.txt  fastpli.analysis.images.to_image_space.rst.txt  fastpli.analysis.images.unit_vectors.rst.txt  fastpli.analysis.orientation.fiber.rst.txt  fastpli.analysis.orientation.fiber_bundle.rst.txt  fastpli.analysis.orientation.fiber_bundles.rst.txt  fastpli.analysis.orientation.histogram.rst.txt  fastpli.analysis.orientation.remap_direction.rst.txt  fastpli.analysis.orientation.remap_half_sphere_x.rst.txt  fastpli.analysis.orientation.remap_half_sphere_z.rst.txt  fastpli.analysis.orientation.remap_orientation.rst.txt  fastpli.analysis.orientation.remap_sphere.rst.txt  fastpli.analysis.orientation.remap_spherical.rst.txt  fastpli.analysis.orientation.rst.txt  fastpli.analysis.rofl.rofl.rst.txt  fastpli.analysis.rofl.rst.txt  fastpli.analysis.rst.txt  fastpli.io.fiber_bundles.load.rst.txt  fastpli.io.fiber_bundles.load_dat.rst.txt  fastpli.io.fiber_bundles.load_h5.rst.txt  fastpli.io.fiber_bundles.rst.txt  fastpli.io.fiber_bundles.save.rst.txt  fastpli.io.fiber_bundles.save_dat.rst.txt  fastpli.io.fiber_bundles.save_h5.rst.txt  fastpli.io.rst.txt  (+46 more)
_static/: documentation_options.js
cmake/: __version.py  init.cmake  setup.py  version.cmake  version.hpp  version.hpp.in  version.py  version.py.in
docker/: .docker_run.sh  archlinux  ubuntu
docs/: Makefile  TODO.md  conf.py  examples.md  examples.py  index.rst  requirements.txt  structure.md
example/: big_label.py  bingham.py  check_ref.py  model_solver.py  model_visualizer.py  pipeline.py  requirements.txt  sandbox.py  simpli.py  simpli_mpi.py  simpli_with_analyse.py  simulation.py  vervet_region.py
examples/: crossing.py  model_solver.py  odfs.ipynb  optic_chiasm.ipynb  optic_chiasm.py  orientation_analysis.py  pipeline.py  requirements.txt  sandbox.ipynb  sandbox.py  simpli.py  simpli_mpi.py  simulation.ipynb  simulation.py  simulation_pipeline.py  simulaton.ipynb  solver.ipynb  solver.py  vervet_region.py
paper/: paper.bib  paper.md
src/model/: CMakeLists.txt
src/model/solver/: CMakeLists.txt  cone_class.cpp  cone_class.hpp  fiber_class.cpp  fiber_class.hpp  fiber_segment.cpp  fiber_segment.hpp  oct_tree.cpp  oct_tree.hpp  scene.cpp  scene.hpp  world.cpp  world.hpp
src/model/solver/bindings/: solver_module.cpp
src/objects/: CMakeLists.txt  cell.cpp  cell.hpp  fiber.cpp  fiber.hpp  np_array_container.hpp  np_array_helper.hpp  vector_container.hpp
src/objects/bindings/: cell_module.cpp  fiber_module.cpp  objects_module.cpp  vector_container_module.cpp
src/objects/core/: fiber.cpp  fiber.hpp
src/simulation/: CMakeLists.txt  cell_population.cpp  cell_population.hpp  data_container.hpp  fiber_bundle.cpp  fiber_bundle.hpp  fiber_class.cpp  fiber_class.hpp  fiber_model.cpp  fiber_model.hpp  generator.cpp  generator.hpp  helper.hpp  my_mpi.cpp  my_mpi.hpp  pli_generator.cpp  pli_generator.hpp  pli_simulator.cpp  pli_simulator.hpp  setup.hpp  simulator.cpp  simulator.hpp
src/simulation/bindings/: generator_module.cpp  pli_generator_module.cpp  pli_helper_module.cpp  pli_module.hpp  pli_simulator_module.cpp  simulator_module.cpp
tests/: fastpli_test.py  simulation_pipeline_test.py  test.py
(+88 files in other folders)
